deployment/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  backend-service
spec:
  selector:
    app:  minicms
  type:  LoadBalancer
  ports:
  - port: 80
    targetPort:  9090
