deployment/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  frontend-service
spec:
  selector:
    app:  nginx
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
