deployment/backed-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: dev01.kwadrat.local
    http:
     paths:
     - path: /api(/|$)(.*)
       backend:
         serviceName: backend-service
         servicePort: 80
